# ACO_CoveragePath

./: .gitignore  ACADEMIC_REPORT.md  ANIMATION_GUIDE.md  ANIMATION_VERIFICATION.md  CLAUDE.md  CLEANUP_REPORT.md  CODE_REVIEW.md  IMPLEMENTATION_STATUS.md  PHASE1_COMPLETION_SUMMARY.md  PHEROMONE_ANIMATION_PLAN.md  PRE_STAGE3_VERIFICATION_REPORT.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  STAGE2_COMPLETION_REPORT.md  STAGE2_IMPLEMENTATION_GUIDE.md  STAGE2_SESSION_SUMMARY.md  STAGE2_SETUP_SUMMARY.md  STAGE3_COMPLETION_REPORT.md  STAGE3_IMPLEMENTATION_PLAN.md  TEST_RESULTS_SUMMARY.md  VERIFICATION_REPORT.md  demo_complete_visualization.py  demo_stage1.py  demo_stage3.py  pyproject.toml  streamlit_app.py  test_animation.py  test_full_pipeline.py  test_geometry.py  test_merge_fix.py  test_pheromone_history.py
examples/: README.md  complete_visualization.py  path_animation.py  path_animation_only.py  stage1_geometry.py  stage2_decomposition.py  stage3_optimization.py
scenarios/: large_field.json  medium_field.json  small_field.json
scripts/: README.md
scripts/benchmarks/: benchmark.py  quick_benchmark.py
scripts/validation/: test_dashboard_components.py  test_edge_cases.py  test_final_validation.py  test_pheromone_viz.py  test_pipeline_integration.py  test_streamlit_launch.py
src/: stage1.py
src/dashboard/: __init__.py  (+3 more)
tests/: test_aco.py  test_basic_functionality.py  test_cost_matrix.py  test_decomposition.py  test_integration_stage1.py  test_obstacle_classification_debug.py  test_path_generation.py  test_solution_verification.py  test_stage3_integration.py
(+25 files in other folders)
