[project]
name = "aco-coverage-path"
version = "0.1.0"
description = "ACO-based Agricultural Coverage Path Planning with Multiple Obstacles"
authors = [
    {name = "Khanh Le", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "shapely>=2.0.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "scipy>=1.10.0",
    "pyclipper>=1.3.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pytest>=7.3.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
